--- a/android-client/app/src/main/res/layout/activity_main.xml
+++ b/android-client/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,32 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:gravity="center"
-            android:text="应用设置"
+            android:text="@string/main_activity_title_lable"
             android:textIsSelectable="true"
             android:textSize="24sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="@string/main_activity_device_name_lable"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/nameinput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/main_activity_device_name_plain_text"
+                android:inputType="text" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,8 +55,9 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="50dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
+                android:gravity="right"
                 android:text="@string/main_activity_key_lable"
                 android:textSize="18sp" />
 
@@ -56,8 +80,9 @@
 
             <TextView
                 android:id="@+id/textView8"
-                android:layout_width="50dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
+                android:gravity="right"
                 android:text="IP:"
                 android:textSize="18sp" />
 
